# fcio

./: .drone.star  .gitmodules  Makefile  README.md  Rules.mk  fcio.c  meson.build
examples/: fcio_strip_traces.c  fcio_test_direct_buffer_access.c  meson.build
python/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
python/src/fcio/: __init__.py  fcio_c_wrapper.py
python/src/fcio/cmds/: __init__.py  cmds.py
python/tests/: test_platform.py
scripts/: subtree_add_remote.sh  subtree_add_subdirectory.sh  subtree_pull_origin.sh
src/: Rules-shared.mk  Rules.mk  fcio.c  fcio.h  fcio_utils.c  fcio_utils.h  meson.build  time_utils.c  time_utils.h
subprojects/: bufio.wrap  tmio.wrap
tests/: fcio_benchmark.c  fcio_test_mem_interface.c  fcio_test_record_consistency.c  fcio_test_rw_interface.c  fcio_test_unknown_tags.c  fcio_test_utils.h  meson.build
