[metadata]
name = fcio
version = attr: fcio.__version__
description = FlashCam File Format (FCIO) reader for python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.mpi-hd.mpg.de/software/FlashCam/fcio
author = Simon Sailer
author_email = simon.sailer@mpi-hd.mpg.de
maintainer = MPIK / FlashCam
maintainer_email = fcio-maintainers@mpi-hd.mpg.de
license = MPL-2.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
project_urls =
    repository = https://www.mpi-hd.mpg.de/software/FlashCam/fcio.git
    homepage = https://www.mpi-hd.mpg.de/software/FlashCam/fcio

[options]
packages = find:
install_requires =
    numpy>=1.21
    cppyy ~= 2.4.0
python_requires = >=3.7
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fcio-print-status = fcio.cmds:print_status
    fcio-print-event = fcio.cmds:print_event
    fcio-plot-events = fcio.cmds:plot_events
    fcio-plot-peak-histogram = fcio.cmds:plot_peak_histogram

[flake8]
extend-ignore = E203, E501
indent-size = 2
per-file-ignores = __init__.py:F401